Issue 11 Alignment in mobile.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@ body {
 	font-size: 14px;
 	font-family: 'Saira', monospace;
 	min-height: 100vh;
+  max-width: 100vw;
 	display: grid;
 	grid-template-rows: 1fr auto;
 	position: relative;
@@ -140,15 +141,15 @@ body {
 }
 
 #header {
-	width: 960px;
-	line-height: 40px;
-	margin: auto;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	position: relative;
-	z-index: 20;
-	padding: 20px 0px;
+  width: 960px;
+  line-height: 40px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  z-index: 20;
+  padding: 20px 0px;
 }
 
 #header-left {
@@ -156,7 +157,7 @@ body {
 }
 
 #header-right {
-	height: 30px;
+  height: 30px;
 }
 
 .header-section {
@@ -954,29 +955,11 @@ body {
 }
 
 .boardship {
-	display: grid;
-	grid-gap: 20px;
-	padding: 20px 0px;
-}
-
-.boardship-2 {
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-gap: 80px;
-	padding: 20px 50px;
-}
-/* Board Advisors: grid placement */
-.boardship-advisors .board:nth-child(1) { grid-column: 2; }
-.boardship-advisors .board:nth-child(2) { grid-column: 3; }
-
-@media only screen and (max-width:960px) {
-	.boardship-advisors .board:nth-child(1),
-	.boardship-advisors .board:nth-child(2) {
-	grid-column: auto;
-	}
-}
-
-.boardship-3 {
-	grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  grid-gap: 20px;
+  padding: 20px 0px;
+  justify-content: center;
 }
 
 .boardship-mobile {
